# PaleoclimateVisualizerAPI

./: .dockerignore  .gitignore  Dockerfile  GCP.dockerfile  README.md  VPS.dockerfile  cloudbuild.yaml  data.py  data_sets.py  data_v2.py  docker-compose.yml  download.py  main.py  main_v2.py  proxies.pkl  pyproject.toml  requirements.txt  test.py  test_util.py  to_zarr.py  util.py
PaleoclimateAPITest/: GetTimeSeries.bru  GetTimeSeriesAll.bru  GetTrends.bru  Index.bru  LamdaTest.bru  LightSailTest.bru  MyTest.bru  Prod test.bru  TimeSeriesArea.bru  VPSTest.bru  YearValues.bru  bruno.json
PaleoclimateAPITest/New API/: Get TimeSeries Variable.bru  Get Variable.bru  Get Variables.bru  TimeSeriesArea.bru  Trend.bru  folder.bru  proxies.bru
data/cesm/: psl.nc  tas.nc  us.nc
data/hadcm3/: psl.nc  tas.nc  us.nc
data/lens/: psl.nc  tas.nc  us.nc
data/pace/: psl.nc  tas.nc  us.nc
