[project]
name = "paleoclimatevisualizerapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.uv md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.115.14",
    "mangum==0.19.0",
    "matplotlib==3.10.3",
    "netcdf4==1.7.2",
    "numpy==2.3.0",
    "pandas==2.3.0",
    "scipy==1.16.0",
    "xarray==2025.7.0",
    "zarr==3.0.10",
    "pytest==8.4.1"
]
